# mc_command_paster

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: commands.txt  smoke_commands.txt
mc_command_paster/: __init__.py  __main__.py  cli.py  command_loader.py  execution_controller.py  input_sender.py  logger.py
scripts/: run_all_checks.bat  run_boundary_checks.bat  run_dry_run.bat  run_unittest.bat
tests/: test_smoke.py
